fix max-width and add overflow-x hidden

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
